deploy/music-assistant/music-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: music-assistant
  labels:
    app: music-assistant
spec:
  ports:
    - port: 8095
      name: http
  selector:
    app: music-assistant
  type: ClusterIP
