deploy/music-assistant/music-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: music-assistant
  namespace: music-assistant
spec:
  rules:
  - host: music-assistant.nuc.one
    http:
      paths:
      - backend:
          service:
            name: music-assistant
            port:
              number: 8095
        path: /
        pathType: ImplementationSpecific
